Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37578

Assertion failed in TDC_element::flush on ALTER TABLE GTT DISCARD TABLESPACE

    XMLWordPrintable

Details

    • Not for Release Notes

    Description

      --source include/have_innodb.inc
      CREATE GLOBAL TEMPORARY TABLE t (c INT) ENGINE=InnoDB;
      LOCK TABLES t WRITE;
      ALTER TABLE t DISCARD TABLESPACE;
      

      Leads to:

      MDEV-35915-2 CS 12.0.1 f88831afe2e18d124dfeaaf15ac51725a319b8e2 (Debug, Clang 21.1.0-20250811) Build 06/09/2025

      mariadbd: /test/bb-12.0-nikita-global-tmp_dbg/sql/table_cache.cc:1282: void TDC_element::flush(THD *, bool): Assertion `thd->mdl_context.is_lock_owner(MDL_key::TABLE, share->db.str, share->table_name.str, MDL_EXCLUSIVE)' failed.
      

      MDEV-35915-2 CS 12.0.1 f88831afe2e18d124dfeaaf15ac51725a319b8e2 (Debug, Clang 21.1.0-20250811) Build 06/09/2025

      Core was generated by `/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-dbg/bin/mariadbd --no-d'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
       
      [Current thread is 1 (LWP 1084025)]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
      #3  0x000070006d44526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
      #4  0x000070006d4288ff in __GI_abort () at ./stdlib/abort.c:79
      #5  0x000070006d42881b in __assert_fail_base (fmt=0x70006d5d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x64deeb39ccd9 "thd->mdl_context.is_lock_owner(MDL_key::TABLE, share->db.str, share->table_name.str, MDL_EXCLUSIVE)", file=file@entry=0x64deeb2f5784 "/test/bb-12.0-nikita-global-tmp_dbg/sql/table_cache.cc", line=line@entry=1282, function=function@entry=0x64deeb39cd3d "void TDC_element::flush(THD *, bool)") at ./assert/assert.c:94
      #6  0x000070006d43b507 in __assert_fail (assertion=0x64deeb39ccd9 "thd->mdl_context.is_lock_owner(MDL_key::TABLE, share->db.str, share->table_name.str, MDL_EXCLUSIVE)", file=0x64deeb2f5784 "/test/bb-12.0-nikita-global-tmp_dbg/sql/table_cache.cc", line=1282, function=0x64deeb39cd3d "void TDC_element::flush(THD *, bool)")at ./assert/assert.c:103
      #7  0x000064deec218df8 in TDC_element::flush (this=0x6fff4002e468, thd=0x6fff40000d58, mark_flushed=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/table_cache.cc:1280
      #8  0x000064deec00a30b in mysql_discard_or_import_tablespace (thd=0x6fff40000d58, table_list=0x6fff40019fe0, discard=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_table.cc:6344
      #9  0x000064deec0d87ea in Sql_cmd_discard_import_tablespace::execute (this=0x6fff4001a718, thd=0x6fff40000d58)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_alter.cc:733
      #10 0x000064deebee9c05 in mysql_execute_command (thd=0x6fff40000d58, is_called_from_prepared_stmt=false)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:5865
      #11 0x000064deebedaea8 in mysql_parse (thd=0x6fff40000d58, rawbuf=0x6fff40019ef0 "ALTER TABLE t DISCARD TABLESPACE", length=32, parser_state=0x700067f31a10)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:7893
      #12 0x000064deebed8689 in dispatch_command (command=COM_QUERY, thd=0x6fff40000d58, packet=0x6fff4000b269 "ALTER TABLE t DISCARD TABLESPACE", packet_length=32, blocking=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:1881
      #13 0x000064deebedb92a in do_command (thd=0x6fff40000d58, blocking=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:1420
      #14 0x000064deec0ccc1e in do_handle_one_connection (connect=0x64deee8b8038, put_in_cache=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_connect.cc:1414
      #15 0x000064deec0cca01 in handle_one_connection (arg=0x64deee7e07c8)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_connect.cc:1326
      #16 0x000070006d49ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #17 0x000070006d529c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      Attachments

        Issue Links

          Activity

            People

              nikitamalyavin Nikita Malyavin
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.25h
                  2.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.