MDEV-37578 Assertion failed in flush() on ALTER TABLE GTT DISCARD TABLESPACE

IMPORT/DISCART TABLESPACE should have no effect for GTT. There is a
possibility to add a specific semantic, but for now it's Not supported.